# MoneyTalks

./: README.md  app.py  moneytalks.db  product_spec.md  pyproject.toml  requirements.txt  user_requirements.md
data/600338/: 1d.parquet
examples/: run_backtest.py  run_paper_trade.py
moneytalks/: __init__.py  config.py
moneytalks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
moneytalks/backtest/: engine.py  metrics.py  portfolio.py  report.py
moneytalks/data/: base.py  cleaner.py  store.py  tushare_source.py  yfinance_source.py
moneytalks/execution/: base.py  paper.py  scheduler.py
moneytalks/storage/: database.py  models.py
moneytalks/strategy/: base.py  signals.py
moneytalks/strategy/examples/: rsi_mean_revert.py  sma_cross.py
moneytalks/utils/: logger.py  types.py
tests/: test_backtest.py  test_data.py  test_metrics.py
