[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneytalks"
version = "0.1.0"
description = "A quantitative backtesting and strategy execution system"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.31",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
include = ["moneytalks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
